6. Изменить программу Tracker из 2-го модуля [#10039 #307183] Исправления